# tg_20250606

./: .gitignore  CMakeLists.txt  README.md  opencv_build  opencv_src
docs/design/: README.md
docs/design/architectural_rationale/: architecture_2025-06-06.md
docs/design/class_diagrams/: as_of_20250609.md
docs/design/historic_code_samples/: factory_demo_1_cpp.md  factory_demo_2_cpp.md  factory_demo_3_cpp.md  factory_demo_4_cpp.md  factory_demo_5_cpp.md  factory_demo_6_cpp.md
docs/design/historic_monologues/: ai_planning_20250529_2244pm.md  ai_review_20250524.md  ai_review_20250525_0959am.md  ai_review_20250530_2012pm.md  class_diagram_20250530_1940pm.md  design_dag_check.md  design_task_graph.md  instruction_20250605_1958pm.md  overview.md  project_guidelines.md
docs/design/implementation_plans/: as_of_20250609.md
src/: CMakeLists.txt  main.cpp
src/data/hashing/: bitwise_detail.hpp  fnv1a_detail.cpp  superfasthash_detail.cpp
src/tg/common/: project_macros.hpp
src/tg/core/: core_data.hpp  core_enums.hpp  core_exceptions.hpp  data_callback.cpp  data_callback.hpp  data_checker.cpp  data_checker.hpp  data_impl.cpp  data_impl.hpp  data_info_tuple.cpp  data_info_tuple.hpp  data_visitor.hpp  enums.hpp  exceptions.hpp  exec_data.cpp  exec_data.hpp  factory.cpp  factory.hpp  fwd.hpp  graph.cpp  graph.hpp  input.fwd.hpp  input.hpp  output.fwd.hpp  output.hpp  proc.cpp  proc.hpp  scope.cpp  scope.hpp  scope_info.cpp  scope_info.hpp  small_graph.cpp  small_graph.hpp  step.cpp  step.hpp  step_data.cpp  step_data.hpp  step_info.cpp  (+5 more)
tests/: scope_step_iter_test.cpp
(+75 files in other folders)
